# framework

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  fips.yml
projects/: CMakeLists.txt
projects/ape-hunter/: CMakeLists.txt  colorLerp.cpp  colorLerp.h  main.cpp  objects.cpp  objects.h  textManager.cpp  textManager.h
projects/data/: ape-hunter.yml
projects/drawing/: CMakeLists.txt  basic_instanced.glsl  drawing.cpp  drawing_sg.cpp  drawing_sg.h
projects/hello-box2d/: CMakeLists.txt  hello-box2d.cpp
projects/hello-camera/: CMakeLists.txt  hello-camera.cpp
projects/hello-resize/: CMakeLists.txt  hello-resize.cpp
projects/hello-touch/: CMakeLists.txt  hello-touch.cpp
projects/hello-world/: CMakeLists.txt  hello-world.cpp
projects/kladkostroj/: CMakeLists.txt  kladkostroj.cpp
projects/performance/: CMakeLists.txt  main.cpp
projects/rope/: CMakeLists.txt  rope.cpp
projects/solar-system/: CMakeLists.txt  bodies_tree.cpp  bodies_tree.h  body.cpp  body.h  body_info.cpp  body_info.h  body_system.cpp  body_system.h  camera.cpp  camera.h  commons.h  quadtree.h  solar-system.cpp  trajectory_resolutions.cpp  trajectory_resolutions.h  unit.cpp  unit.h  view.cpp  view.h
projects/solar-system/data/: colors.json  data.yml  ephemeris.json  major-bodies-earth.json  major-bodies.json  major-bodies~.json  major-bodies~original.json  major-bodies~test.json  small-bodies-sbdb-100km.json  small-bodies-sbdb-10km.json  small-bodies-sbdb-50km.json  small-bodies-sbdb.json  test-bodies.json
projects/solar-system/data/bodies/: major-bodies.json  small-bodies-sbdb-100km.json  (+3 more)
projects/solar-system/ephemerides/: bodies_data_cleanup.py  create_test_bodies.py  major-bodies-final-2.json  major-bodies-final-add-attractors.py  major-bodies-final-attractors.json  major-bodies-final.json  major-bodies-manual-2.json  major-bodies-manual-3.json  major-bodies-manual-4.json  major-bodies-manual-5.json  major-bodies-manual.json  major-bodies-manual.py  missing-bodies.json
projects/test/: CMakeLists.txt  main.cpp
projects/two-body/: CMakeLists.txt  two-body.cpp
(+83 files in other folders)
