# Add new projects here

add_subdirectory(hello-world)
add_subdirectory(hello-box2d)
add_subdirectory(hello-resize)
add_subdirectory(hello-camera)
add_subdirectory(drawing)
add_subdirectory(ape-hunter)
add_subdirectory(kladkostroj)
add_subdirectory(rope)
add_subdirectory(two-body)
add_subdirectory(solar-system)
